--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
             android:layout_height="0dp"
             android:textColor="@color/white"
             android:gravity="center"
-            android:background="@drawable/img1"
+            android:background="@drawable/svg1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toEndOf="parent"
